--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,5 +14,5 @@ jobs:
       packages: write
     uses: ethn1ee/pi/.github/workflows/docker-publish.yaml@main
     with:
-      image_name: pi-stats-api
+      image_name: pi-api-stats
     secrets: inherit
