--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-and-publish:
-    name: Build and Publish
+    name: Call Docker Publish
     permissions:
       contents: read
       packages: write
