--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ jobs:
     name: Call Release Workflow
     permissions:
       contents: read
+      contents: write
       packages: write
     uses: ethn1ee/pi/.github/workflows/release.yaml@main
     with:
